# acuneus

./: Cargo.toml  LICENSE  README.md  build.rs  usage.md
.github/workflows/: release.yaml
examples/: cuneus-audiovis.rs  cuneus-buddhabrot.rs  cuneus-cliffordcompute.rs  cuneus-cnn.rs  cuneus-computecolors.rs  cuneus-cuneus.rs  cuneus-debugscreen.rs  cuneus-fft.rs  cuneus-fluid.rs  cuneus-gaussian3d.rs  cuneus-lego.rs  cuneus-lich.rs  cuneus-mandelbulb.rs  cuneus-matrix.rs  cuneus-nebula.rs  cuneus-orbits.rs  cuneus-pathtracing.rs  cuneus-physarum.rs  cuneus-rorschach.rs  cuneus-roto.rs  cuneus-scenecolor.rs  cuneus-sdvert.rs  cuneus-sinh.rs  cuneus-spiralchaos.rs  cuneus-synth.rs  cuneus-tree.rs  cuneus-veridisquo.rs  cuneus-volumepassage.rs  cuneus-voronoi.rs  roto.rs
examples/shaders/: 2dneuron.wgsl  buddhabrot.wgsl  cnn.wgsl  debugscreen.wgsl  fft.wgsl  gaussian3d.wgsl  jfa.wgsl  kuwahara.wgsl  lich.wgsl  mandelbulb.wgsl  pathtracing.wgsl  rorschach.wgsl  roto.wgsl  synth.wgsl  tameimp.wgsl  veridisquo.wgsl  volumepassage.wgsl  voronoi.wgsl
include/: acuneus.h  acuneus_capi.h  cuneus.h
scripts/: gen_registry.py  generated.rs  validate_params.py
shaders/: blit.wgsl  cuneus.wgsl  sdvert.wgsl
src/: app.rs  bin_registry.rs  capi.rs  controls.rs  embedded.rs  embedded_generated.rs  export.rs  font.rs  fps.rs  gaussian.rs  hdri.rs  hot.rs  lib.rs  ply.rs  remote.rs  renderer.rs  renderkit.rs  shader.rs  spectrum.rs  texture.rs  uniforms.rs
src/compute/: builder.rs  core.rs  multipass.rs  resource.rs
src/gst/: audio.rs  mod.rs  offline_audio.rs  video.rs  (+1 more)
(+2 files in other folders)
